Save per-game OSD config and make launch args optional
- Save resolution/phone/rotate to <game>.conf next to the game JAR,
  loaded automatically on next launch with highest priority
- Pass saved rotate (-r) and phone mode (-p) to sdl_interface on start
- Make width/height/sound command-line args optional (default 240x320)
- Auto-detect resolution from path/filename hints (e.g. 320x240 or 320240)
- Fix spaces in JAR path: use File.toURI().toURL() instead of string concat
- Fix phone mode not persisting: inject game config into SDLConfig before
  settingsChanged() and pass phone index to sdl_interface via -p arg

Made-with: Cursor